--- a/Clima por SMS con Twilio .ipynb
+++ b/Clima por SMS con Twilio .ipynb
@@ -32,10 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TWILIO_ACCOUNT_SID ='XXXXXXXXXXXXXXXXXXXX'\n",
-    "TWILIO_AUTH_TOKEN ='XXXXXXXXXXXXXXXXXXXX'\n",
-    "PHONE_NUMBER ='+ XX XXX XXX XXX'\n",
-    "API_KEY_WAPI = 'XXXXXXXXXXXXXXXXXXXX'"
+    "TWILIO_ACCOUNT_SID = os.getenv(TWILIO_ACCOUNT_SID = os.getenv(API_KEY))\n",
+    "TWILIO_AUTH_TOKEN =os.getenv(TWILIO_AUTH_TOKEN)\n",
+    "PHONE_NUMBER =os.getenv(PHONE_NUMBER)\n",
+    "API_KEY_WAPI = os.getenv(API_KEY_WAPI)"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = 'place'\n",
+    "query = 'Bad Segeberg'\n",
     "api_key = API_KEY_WAPI\n",
     "url_clima = 'http://api.weatherapi.com/v1/forecast.json?key='+api_key+'&q='+query+'&days=3&aqi=no&alerts=no'\n",
     "url_clima"
@@ -386,11 +386,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba312b5-c191-4efc-8d40-8b1eb3f3a56a",
+   "id": "f05291e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PHONE_NUMBER"
+    "MYNUMBER = os.getenv(MYNUMBER)"
    ]
   },
   {
@@ -418,7 +418,7 @@
     "                .create(\n",
     "                     body='Hola!  El pronostico del tiempo en ' + query +' hoy '+ df['Fecha'][2] + ' de 0:00 a 6:00 el clima será ' + condicion_moda[2] +' con viento de : '+ str(viento_promedio[2]) + ' mph y dirección a ' +  direccion_moda[2]  ,\n",
     "                     from_=PHONE_NUMBER,\n",
-    "                     to='+XXXXXXX'\n",
+    "                     to= MYNUMBER\n",
     "                 )\n",
     "\n",
     "print('Mensaje Enviado ' + message.sid)"
