--- a/Clima por SMS con Twilio .ipynb
+++ b/Clima por SMS con Twilio .ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TWILIO_ACCOUNT_SID = os.getenv(TWILIO_ACCOUNT_SID = os.getenv(API_KEY))\n",
+    "TWILIO_ACCOUNT_SID = os.getenv(TWILIO_ACCOUNT_SID)\n",
     "TWILIO_AUTH_TOKEN =os.getenv(TWILIO_AUTH_TOKEN)\n",
     "PHONE_NUMBER =os.getenv(PHONE_NUMBER)\n",
     "API_KEY_WAPI = os.getenv(API_KEY_WAPI)"
